# PacketingAlgorithm

./: .gitignore  CMakeLists.txt  Makefile  Packet.cpp  Packet.hpp  Readme.md  decode.cpp  main.cpp
src/: Packet.cpp  Packet.hpp  decode.cpp  encode.cpp
